--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Parcel</title>
+    <title>tribute</title>
     <link rel="stylesheet" href="scss/styles.scss">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="./index.css">
-    <link
-    href="/your-path-to-your-compiled-css-including-fontawesome/file.css"
-    rel="stylesheet"
-  />
     <script type="module" src="js/main.js"></script>
 </head>
   <body>
@@ -210,7 +205,8 @@
         </div>
     
     <footer><div>design by <a href ="https://twitter.com/mutalibb">mutalibb</a> </div>  
-    <div>photo credit <a href ="https://pixabay.com/">pixabay</a> </div></footer>
+    <div>photo credit <a href ="https://pixabay.com/">pixabay</a> </div>
+  </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
