--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 
     <div class="row">
         <div  class="col-3">
-          <div id="list-example" class="list-group list-group-flush sticky-top mb-5 ">
+          <div id="list-example" class="list-group list-group-flush sticky-top mb-5 text-center overflow-auto">
             <a class="list-group-item list-group-item-action list-group-item-light-subtle" href="#list-item-1">Early Life</a>
             <a class="list-group-item list-group-item-action list-group-item-light-subtle" href="#list-item-2">Education and Early Career</a>
             <a class="list-group-item list-group-item-action list-group-item-light-subtle" href="#list-item-3">Building a Legacy</a>
@@ -206,6 +206,7 @@
     
     <footer><div>design by <a href ="https://twitter.com/mutalibb">mutalibb</a> </div>  
     <div>photo credit <a href ="https://pixabay.com/">pixabay</a> </div>
+    <div><a href ="https://dev.to/mutalibb/tribute-page-6ei">About</a> </div>
   </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
