--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 
     <div class="row">
         <div  class="col-3">
-          <div id="list-example" class="list-group list-group-flush sticky-top mb-5 text-center overflow-auto">
+          <div id="list-example" class="list-group list-group-flush sticky-top mb-5 text-center overflow-hidden">
             <a class="list-group-item list-group-item-action list-group-item-light-subtle" href="#list-item-1">Early Life</a>
             <a class="list-group-item list-group-item-action list-group-item-light-subtle" href="#list-item-2">Education and Early Career</a>
             <a class="list-group-item list-group-item-action list-group-item-light-subtle" href="#list-item-3">Building a Legacy</a>
